# Haskell

./: README.md
COMP3141/Ex02/: Ex02.hs
COMP3141/Ex02/Art/: Art.hs
COMP3141/Ex03/: Ex03.hs
COMP3141/Ex03/.stack-work/install/ccbce92a/flag-cache/: QuickCheck-2.10.1-Ewacc04OJICEFWthkI3IgS  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tf-random-0.5-ABwehMmciu8CuAFbHLp6To
COMP3141/Ex04/: Ex04.cabal  Ex04.hs
COMP3141/Ex05/: Ex05.cabal  Ex05.hi  Ex05.hs  Main.hi  Main.hs
COMP3141/Ex05/.stack-work/install/ccbce92a/flag-cache/: Ex05-1.0
COMP3141/Ex06/: Ex06.cabal  Ex06.hs
COMP3141/Ex07/: Ex07.cabal  Ex07.hs
COMP3141/Ex08/: Ex08.cabal  Ex08.hs
COMP3141/Ex09/: Ex09.cabal  Ex09.hs
COMP3141/Hare/: Hare.hs
COMP3141/Hare/.stack-work/install/3573363d/flag-cache/: QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-CdiTOvx5ZEQ2RerUYIP05k  ansi-wl-pprint-0.6.7.3-KaeMs0wRg3QC5nOlh5MJx3  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  optparse-applicative-0.13.2.0-HJkbllVKjCvKRUvctswKnJ  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  random-1.1-9tceXaeYIMZ4JrKq20Egog  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-tdfa-1.2.2-CuFri6F1SLwFkkN6cPEwX5  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  tasty-0.11.3-9ltSI18aAPrAlrnuKCIGdo  tasty-hunit-0.9.2-160tsYx5Fmt6fgeypi3WOw  tasty-quickcheck-0.8.4-KNHtV2m57CG25wQHIzzmOv  (+4 more)
COMP3141/Hare/Tests/: Transcript.hs
COMP3141/Tortoise/: TortoiseCombinators.hs
(+45 files in other folders)
