name: Ex05
version: 1.0
cabal-version: >= 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Ex05
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Ex05
  buildable: True
  build-depends:
      mtl -any, random -any,
      base -any, QuickCheck -any
